Project-1-3Tier-DevSecOps-Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: three-tier
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    role: backend
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: three-tier
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30001
  selector:
    role: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: three-tier
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    role: database
